--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -36,6 +36,7 @@
   {{#if isAuthenticated}}
     {{render "editor"}}
     {{render "notification"}}
+    {{render "delete-confirm"}}
   {{else}}
     {{render "signup"}}
     {{render "login" }}
