--- a/frontend/app/templates/post.hbs
+++ b/frontend/app/templates/post.hbs
@@ -19,6 +19,13 @@
     </a>
     {{/if}}
 
+    {{#if currentUser.admin}}
+    <span>. </span>
+    <a href="#" {{action "deletePost" model}} data-toggle="modal" data-target="#delete-confirm">
+      <span class="glyphicon glyphicon-trash delete-icon" aria-hidden="true"></span>
+    </a>
+    {{/if}}
+
   </div>
   <div class="clearfix"></div>
 </div>
