update to ember 1.13.7

--- a/frontend/app/templates/delete-confirm.hbs
+++ b/frontend/app/templates/delete-confirm.hbs
@@ -9,7 +9,7 @@
       </div>
       <div class="modal-body">
         <p class="warning-text">Do you really want to delete it?</p>
-        <button {{action deleteMode}} data-loading-text="Deleting" autocomplete="off" id="deleteButton" class="center-block btn btn-default delete-button">Delete</button>
+        <button {{action "deleteResource" deleteMode}} data-loading-text="Deleting" autocomplete="off" id="deleteButton" class="center-block btn btn-default delete-button">Delete</button>
       </div>
     </div>
   </div>
