--- a/frontend/app/templates/user/posts.hbs
+++ b/frontend/app/templates/user/posts.hbs
@@ -1,7 +1,7 @@
 {{#if model.length}}
 <div class="container-fluid user-content ">
   <ul class="list-group">
-    {{#each post in model}}
+    {{#each model as |post|}}
       <li class="list-group-item">{{post.title}}<span>.{{post.commentsCount}}comments</span></li>
       <hr />
     {{/each}}
