--- a/frontend/app/templates/post/comments.hbs
+++ b/frontend/app/templates/post/comments.hbs
@@ -30,7 +30,7 @@
 
         {{#if currentUser.admin}}
         <span>. </span>
-        <a href="#" {{action "deleteComment" comment}} data-toggle="modal" data-target="#delete-confirm">
+        <a href="#" {{action "setDeleteMode" "deleteComment" comment}} data-toggle="modal" data-target="#delete-confirm">
           <span class="glyphicon glyphicon-trash delete-icon" aria-hidden="true"></span>
         </a>
         {{/if}}
@@ -42,7 +42,7 @@
       <div class="clearfix"></div>
     </li>
   {{/each}}
-  
+
   {{#if commentArray.length}}
     {{#if isEnd}}
     <button class="center-block btn btn-default normal-button" disabled="disabled">No more</button>
