use components to replace editor controller and template

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -34,7 +34,7 @@
 <section class="index">
 
   {{#if isAuthenticated}}
-    {{render "editor"}}
+    {{custom-editor createMode=createMode applicationController=this createItem=createItem}}
     {{notification-center currentUser=currentUser}}
     {{delete-confirm mode=deleteMode item=deleteItem }}
   {{else}}
