complete layout style

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,3 +1,11 @@
-<h2 id="title">Welcome to Ember</h2>
-
-{{outlet}}
+<nav class='global-nav'>
+  <div class='global-nav__title'>
+    Simple Forum
+  </div>
+  <div class='global-nav__menu'>
+    <button class='btn btn__primary'>Login</button>
+  </div>
+</nav>
+<div class='site-container'>
+  {{outlet}}
+</div>
