--- a/frontend/app/styles/_layout.scss
+++ b/frontend/app/styles/_layout.scss
@@ -1,13 +1,12 @@
 .global-nav {
   display: flex;
   padding: 1.2rem 2.2rem;
-  background: url('/assets/img/background.png');
-  background-color: $main-color;
+  background-color: #fff;
   align-items: center;
 }
 
 .global-nav__title {
-  color: #fff;
+  color: $main-color;
   font-size: 1.33rem;
   font-style: italic;
 }
